Upgrade TS to latest stable version (v5.6.2)
- Add new noUncheckedSideEffectImports flag

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
     "noUncheckedIndexedAccess": true,
     "noImplicitOverride": true,
     "strictFunctionTypes": false,
+    "noUncheckedSideEffectImports": true,
     /* Not transpiling with Typescript (using Vite) */
     "module": "preserve",
     "noEmit": true,
