--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@testing-library/react": "^16.0.1",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.5.2",
+    "@total-typescript/ts-reset": "^0.6.1",
     "@types/classnames": "^2.3.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.5.1",
