Add script to parse SVG sprite and generate icon types

--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "build": "yarn build:css && tsc -b && vite build",
+    "build": "yarn build:icon-types && yarn build:css && tsc -b && vite build",
     "build:css": "tailwindcss -i app/styles/tailwind/tailwind.css -o app/styles/tailwind/index.css",
+    "build:icon-types": "node scripts/gen-icon-types.js",
     "build:preview": "vite preview --port 8080",
     "deps": "npm-check-updates",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "prettier:check": "prettier --check '**/*.{ts,tsx,js,jsx}' --no-error-on-unmatched-pattern",
     "prettier:write": "prettier --write '**/*.{ts,tsx,js,jsx}' --no-error-on-unmatched-pattern",
-    "start": "concurrently \"yarn start:css\" \"yarn start:dev\"",
+    "start": "yarn build:icon-types && concurrently \"yarn start:css\" \"yarn start:dev\"",
     "start:dev": "vite",
     "start:css": "tailwindcss -i app/styles/tailwind/tailwind.css -o app/styles/tailwind/index.css --watch",
     "test": "vitest",
