--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
+    "browserslist:lint": "npx browserslist lint",
+    "browserslist:refresh": "npx update-browserslist-db@latest",
     "build": "yarn build:icon-types && yarn build:css && tsc -b && vite build",
     "build:css": "tailwindcss -i app/styles/tailwind/tailwind.css -o app/styles/tailwind/index.css",
     "build:icon-types": "node scripts/gen-icon-types.js",
@@ -54,7 +56,6 @@
     "@vitejs/plugin-react": "^4.3.1",
     "@vitest/coverage-v8": "^2.0.5",
     "@vitest/ui": "^2.0.5",
-    "autoprefixer": "^10.4.20",
     "browserslist-to-esbuild": "^2.1.1",
     "concurrently": "^8.2.2",
     "eslint": "^9.9.1",
@@ -67,6 +68,7 @@
     "npm-check-updates": "^17.1.0",
     "postcss": "^8.4.41",
     "postcss-import": "^16.1.0",
+    "postcss-preset-env": "^10.0.5",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.10",
