--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@total-typescript/ts-reset": "^0.6.1",
-    "@types/classnames": "^2.3.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.5.1",
     "@types/react": "^18.3.4",
@@ -75,6 +74,7 @@
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2",
+    "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^2.0.5"
   },
   "engines": {
