--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "@vitest/coverage-v8": "^2.0.5",
     "@vitest/ui": "^2.0.5",
+    "browserslist": "^4.24.2",
     "browserslist-to-esbuild": "^2.1.1",
     "concurrently": "^8.2.2",
     "eslint": "^9.9.1",
@@ -64,6 +65,7 @@
     "eslint-plugin-tailwindcss": "^3.17.4",
     "globals": "^15.9.0",
     "jsdom": "^25.0.0",
+    "lightningcss": "^1.27.0",
     "npm-check-updates": "^17.1.0",
     "postcss": "^8.4.41",
     "postcss-import": "^16.1.0",
