--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "browserslist-to-esbuild": "^2.1.1",
     "concurrently": "^8.2.2",
     "eslint": "^9.9.1",
+    "eslint-plugin-compat": "^6.0.1",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.11",
