Enable ESLint in tests. Add config *.ts files to tsconfig.json instead

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -57,6 +57,8 @@
   "include": [
     "app/**/*",
     "typings/*",
-    "tailwind.config.ts"
+    "tailwind.config.ts",
+    "vite.config.ts",
+    "vitest.setup.ts",
   ]
 }
