--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-compat": "^6.0.1",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.11",
